--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "type": "module",
-  "name": "group-13",
+  "name": "Disaster Routine",
   "version": "1.0.0",
-  "description": "Morning routine game by Group 13",
+  "description": "simple text based game",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
